# CGL-CONIC

./: .gitignore  .travis.yml  CglConicMIRParam.cpp  CglConicMIRParam.hpp  Dependencies  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  cglconic-uninstalled.pc.in  cglconic.pc.in  compile.sh  configure  configure.ac  get_dependencies.sh
doxydoc/: doxygen.conf.in
examples/: Makefile  Makefile.in  conic_cgl.cpp  cutting_plane_solver.cpp  ex1.mps  ex11.mps  gd1.cpp  ipm.cpp  milp_cuts.cpp  mir.cpp
src/: CglConicConfig.h  CglConicCutGenerator.cpp  CglConicCutGenerator.hpp  CglConicMIR.cpp  CglConicMIR.hpp  CglConicParam.cpp  CglConicParam.hpp  Makefile.am  Makefile.in  config.h.in  config_cglconic.h.in  config_cglconic_default.h  config_default.h
src/CglConicGD1/: CglConicGD1.cpp  CglConicGD1.hpp  CglConicGD1Cut.cpp  CglConicGD1Cut.hpp  Makefile.am  Makefile.in  README
src/CglConicGD2/: CglConicGD2.cpp  CglConicGD2.hpp  CglConicGD2Param.cpp  CglConicGD2Param.hpp  Makefile.am  Makefile.in  README
src/CglConicIPM/: CglConicIPM.cpp  CglConicIPM.hpp  CglConicIPMParam.cpp  CglConicIPMParam.hpp  Makefile.am  Makefile.in  README
src/CglConicIPMint/: CglConicIPMint.cpp  CglConicIPMint.hpp  CglConicIPMintParam.cpp  CglConicIPMintParam.hpp  Makefile.am  Makefile.in  README
src/CglConicMIR/: CglConicMIR.cpp  CglConicMIR.hpp  CglConicMIRParam.hpp  Makefile.am  Makefile.in  README
src/CglConicOA/: CglConicOA.cpp  CglConicOA.hpp  CglConicOAParam.cpp  CglConicOAParam.hpp  Makefile.am  Makefile.in  README
